# noaabathymetry-browser

./: .gitignore  README.md  SECURITY.md  nbs_browser.spec  noaabathymetry_ui.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: 0_general.yml  1_bug_report.yml  2_feature_request.yml  3_question.yml
.github/workflows/: docs.yml  release.yml
assets/: NOAA.icns  generate_icon.py
src/: bridge.py  dialogs.py  main.py  server.py
src/web/: bridge-ws.js  index.html  map.js  panels.js  styles.css
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/: getting-started.md  installation.md  intro.md  troubleshooting.md
website/docs/features/: build-mosaics.md  explore-map.md  export-projects.md  fetch-tiles.md
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
website/src/theme/ColorModeToggle/: index.js
